--- a/torneiohp/src/components/StudentsContainer/style.css
+++ b/torneiohp/src/components/StudentsContainer/style.css
@@ -6,6 +6,8 @@
   margin: 0;
 }
 .student {
+  width: 27%;
+  margin: 10px;
   background-color: #eaf2ef;
   padding: 10px 30px;
 }
@@ -46,4 +48,16 @@
   border: 7px solid #ecb939;
   color: #ecb939;
   text-shadow: 1px 2px 2px black;
+}
+@media (max-width: 860px) {
+  .student {
+    box-sizing: border-box;
+    width: 80%;
+    margin: 10px auto;
+    height: fit-content;
+  }
+  .studentsContainer {
+    display: flex;
+    flex-direction: column;
+  }
 }
