--- a/torneiohp/src/App.css
+++ b/torneiohp/src/App.css
@@ -1,6 +1,7 @@
 .container {
-  background: url("https://i.pinimg.com/originals/a5/be/1e/a5be1eab17eced32f3cf4493aa2a88b1.jpg");
+  background-image: url("https://i.pinimg.com/originals/a5/be/1e/a5be1eab17eced32f3cf4493aa2a88b1.jpg");
   height: 100vh;
+  background-size: cover;
 }
 
 .App-logo {
